# OpenAIWorkshopv2

./: SETUP.md
.github/workflows/: agent-evaluation.yml  destroy.yml  docker-application.yml  docker-mcp.yml  infrastructure.yml  integration-tests.yml  orchestrate.yml  promote-to-main.yml  readme.md  update-containers.yml
agentic_ai/agents/: base_agent.py
agentic_ai/agents/agent_framework/: README.md  single_agent.py
agentic_ai/agents/agent_framework/multi_agent/: HANDOFF_README.md  handoff_multi_domain_agent.py  magentic_group.py  reflection_agent.py
agentic_ai/agents/mcp_agent_demo/: pyproject.toml
agentic_ai/applications/: .env.sample  pyproject.toml  requirements.txt
agentic_ai/observability/: setup.py
agentic_ai/workflow/fraud_detection_durable/: .env.sample  README.md  backend.py  fraud_analysis_workflow.py  pyproject.toml  start.ps1  stop.ps1  worker.py
agentic_ai/workflow/fraud_detection_durable/ui/src/components/: EventFeed.jsx
agentic_ai/workflow/fraud_detection_durable/ui/src/constants/: config.js
infra/bicep/: main.json
infra/bicep/modules/: application.bicep
infra/modules/: application.bicep
infra/terraform/: network.tf
mcp/: .env.sample
tests/: test_agent_framework_1_2_1_regression.py
